tests/valid/16_prueba_bool.patito
programa pruebaBoolCompleto;
vars a, b : entero;
inicio
{
    a = 5;
    b = 3;
    escribe(a < b);
    escribe(a > b);
    escribe(a == b);
    escribe(a != b);
    escribe(a < a);
    escribe(a == a);
}
fin