tests/invalid/02_keyword_como_id.patito
programa keywordId;
vars
    entero : entero;
inicio
{
}
fin
